# poker-net-rs

./: .gitignore  Cargo.toml  README.md  package.json  webpack.config.js
backend/: Cargo.toml
backend/src/: lib.rs  main.rs  ws.html
backend/src/base/: card.rs  casino.rs  game_base.rs  mod.rs  state_manager.rs  table.rs
backend/src/net/: dispatcher.rs  manager.rs  mod.rs
backend/tests/: unit.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  index.html  table.css
frontend/src/: main.rs
frontend/src/components/: card.rs  first_page.rs  game_tabel.rs  hand.rs  mod.rs  players.rs  room.rs  user.rs
frontend/src/contexts/: game_state.rs
public/: card2.html  cards.html  index.html  index.js  main.js  page2.html  pocker_room.html  pocker_room.js  table.css
src/: game_base.rs  lib.rs
src/backend/: casino.rs  game_base.rs  mod.rs
