[package]
name = "pocker-net-rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.76"
anchor-lang = "0.32.1"
rand = "0.8"
once_cell = "1.21"


[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "KeyboardEvent",
]
