[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
rand = "0.8"
regex = "1.11.1"
serde = { workspace = true }
serde_json = { workspace = true }

uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
futures-util = "0.3"
once_cell = "1.21"
